export const snapshot = {};

snapshot[`tagged union 1`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "A",
              type: "string",
            },
            value: {
              type: "boolean",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "B",
              type: "string",
            },
            value: {
              type: "number",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "C",
              type: "string",
            },
            value: {
              type: "string",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
      ],
      discriminator: "type",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`tagged union 2`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "A",
              type: "string",
            },
            value: {
              type: "boolean",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "B",
              type: "string",
            },
            value: {
              type: "number",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "C",
              type: "string",
            },
            value: {
              type: "string",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
      ],
      description: "One.",
      discriminator: "type",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;

snapshot[`tagged union 3`] = `
{
  additionalProperties: false,
  properties: {
    value: {
      anyOf: [
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "A",
              type: "string",
            },
            value: {
              type: "boolean",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "B",
              type: "string",
            },
            value: {
              type: "number",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
        {
          additionalProperties: false,
          properties: {
            type: {
              const: "C",
              type: "string",
            },
            value: {
              type: "string",
            },
          },
          required: [
            "type",
            "value",
          ],
          type: "object",
        },
      ],
      description: "Two. One.",
      discriminator: "type",
    },
  },
  required: [
    "value",
  ],
  type: "object",
}
`;
